[package]
name = "ct_id"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/id"


[lib]
path = "src/id.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
ctcore = { workspace = true, features = ["entries", "process"] }
selinux = { workspace = true }

[[bin]]
name = "id"
path = "src/main.rs"
