[package]
name = "ct_install"

version.workspace = true
authors.workspace = true
license.workspace = true
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }

description = "install ~ (ctutils) copy files from SOURCE to DESTINATION (with specified attributes)"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/install"

[lib]
path = "src/install.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
filetime = { workspace = true }
file_diff = { workspace = true }
selinux = { workspace = true }
ctcore = { workspace = true, features = [
    "backup-control",
    "fs",
    "mode",
    "perms",
    "entries",
    "process",
] }
tempfile = { workspace = true }

[[bin]]
name = "install"
path = "src/main.rs"
