[package]
name = "ct_ln"

version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/ln"
description = "ln ~ (ctutils) create a (file system) link to TARGET"

[lib]
path = "src/ln.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
ctcore = { workspace = true, features = ["backup-control", "fs"] }
tempfile = { workspace = true }

[[bin]]
name = "ln"
path = "src/main.rs"
