[package]
name = "ct_logname"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "logname ~ (ctutils) display the login name of the current user"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/logname"

[lib]
path = "src/logname.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }
ctcore = { workspace = true }

[[bin]]
name = "logname"
path = "src/main.rs"
