[package]
name = "ct_mkfifo"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "mkfifo ~ (ctutils) create FIFOs (named pipes)"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/mkfifo"

[lib]
path = "src/mkfifo.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
ctcore = { workspace = true }
selinux = { workspace = true }

[[bin]]
name = "mkfifo"
path = "src/main.rs"
