[package]
name = "ct_mknod"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "mknod ~ (ctutils) create special file NAME of TYPE"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/mknod"

[lib]
name = "ct_mknod"
path = "src/mknod.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
ctcore = { workspace = true, features = ["mode"] }
selinux = { workspace = true }

[[bin]]
name = "mknod"
path = "src/main.rs"
