[package]
name = "ct_mktemp"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "mktemp ~ (ctutils) create and display a temporary file or directory from TEMPLATE"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/mktemp"

[lib]
path = "src/mktemp.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
ctcore = { workspace = true }

[[bin]]
name = "mktemp"
path = "src/main.rs"
