[package]
name = "ct_more"

version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true

description = "more ~ (ctutils) input perusal filter"
repository = "https://work.ctyun.cn/git/CTyunOS/syskits/src/branch/master/crates/commands/more"

[lib]
path = "src/lib.rs"

[dependencies]
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
clap = { workspace = true }
ctcore = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
regex = { workspace = true }
[target.'cfg(all(unix, not(target_os = "fuchsia")))'.dependencies]
nix = { workspace = true }

[[bin]]
name = "more"
path = "src/main.rs"
